--- a/style.css
+++ b/style.css
@@ -1,79 +1,61 @@
 html {
   box-sizing: border-box;
-  background: url('http://wes.io/hx9M/oh-la-la.jpg') center no-repeat;
-  background-size: cover;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-family: Futura,"Trebuchet MS",Arial,sans-serif;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit; 
+  box-sizing: inherit;
 }
 
-svg {
-  fill:white;
-  background: rgba(0,0,0,0.1);
-  padding: 20px;
-  border-radius: 50%;
-  width: 200px;
-  margin-bottom: 50px;
+body {
+  min-height: 100vh;
+  margin: 0; /* Important! */
+  font-family: sans-serif;
+  background:
+    linear-gradient(45deg, hsla(340, 100%, 55%, 1) 0%, hsla(340, 100%, 55%, 0) 70%),
+    linear-gradient(135deg, hsla(225, 95%, 50%, 1) 10%, hsla(225, 95%, 50%, 0) 80%),
+    linear-gradient(225deg, hsla(140, 90%, 50%, 1) 10%, hsla(140, 90%, 50%, 0) 80%),
+    linear-gradient(315deg, hsla(35, 95%, 55%, 1) 100%, hsla(35, 95%, 55%, 0) 70%);
 }
 
 .wrapper {
-  padding: 20px;
-  max-width: 350px;
-  background: rgba(255,255,255,0.95);
-  box-shadow: 0 0 0 10px rgba(0,0,0,0.1);
+  margin: 0 auto;
+  max-width: 500px;
+  font-size: 20px;
+  line-height: 2;
+  position: relative;
 }
 
-h2 {
-  text-align: center;
-  margin: 0;
-  font-weight: 200;
+a {
+  text-decoration: none;
+  color: black;
+  background: rgba(0,0,0,0.05);
+  border-radius: 20px;
 }
 
-.plates {
-  margin: 0;
+.highlight {
+  transition: all 0.2s;
+  border-bottom: 2px solid white;
+  position: absolute;
+  top: 0;
+  background: white;
+  left: 0;
+  z-index: -1;
+  border-radius: 20px;
+  display: block;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+
+.menu {
   padding: 0;
-  text-align: left;
-  list-style: none;
-}
-
-.plates li {
-  border-bottom: 1px solid rgba(0,0,0,0.2);
-  padding: 10px 0;
-  font-weight: 100;
   display: flex;
+  list-style: none;
+  justify-content: center;
+  margin:100px 0;
 }
 
-.plates label {
-  flex: 1;
-  cursor: pointer;
-}
-
-.plates input {
-  display: none;
-}
-
-.plates input + label:before {
-  content: '⬜️';
-  margin-right: 10px;
-}
-
-.plates input:checked + label:before {
-  content: '🌮';
-}
-
-.add-items {
-  margin-top: 20px;
-}
-
-.add-items input {
-  padding: 10px;
-  outline: 0;
-  border: 1px solid rgba(0,0,0,0.1);
+.menu a {
+  display: inline-block;
+  padding: 5px;
+  margin: 0 20px;
+  color: black;
 }
